# assignment-2-ros-2-and-vision

aisd_motion/: move.py  package.xml  setup.py
aisd_vision/: hands.py  image_publisher.py  package.xml  setup.py
aisd_vision/aisd_vision/: hands.py  image_publisher.py  move.py  package.xml  setup.py
