<?xml version="1.0"?>
<package format="2">
  <name>aisd_motion</name>
  <version>0.0.1</version>
  <description>ROS 2 package for controlling movement based on hand gestures</description>

  <maintainer email="alhe0026@algonquinlive.com">MAHCORP</maintainer>

  <license>TODO: License</license>

  <depend>rclpy</depend>
  <depend>aisd_msgs</depend> <!-- Dependency for Hand messages -->
  <depend>geometry_msgs</depend>
</package>
