<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aisd_vision</name>
  <version>0.0.0</version>
  <description>Vision package for hand tracking</description>
  <maintainer email="youremail@example.com">Your Name</maintainer>
  <license>Unspecified</license>

  <depend>rclpy</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>aisd_msgs</depend>
  <depend>python3-mediapipe-pip</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
