<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aisd_motion</name>
  <version>0.0.0</version>
  <description>Motion control package</description>
  <maintainer email="youremail@example.com">Your Name</maintainer>
  <license>Unspecified</license>

  <depend>rclpy</depend>
  <depend>aisd_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
